feat: 更新示例到新 API，启用 cantilever_beam
## 更新内容
1. ✅ cantilever_beam.cpp - 更新到 ElasticityUnified API
   - 使用 IsotropicElastic 材料
   - 更新为统一接口
   - 编译并运行成功
   - 误差 2.85% ✅

2. ⏸️ thermal_stress_2d.cpp - 更新到新 API（待完善）
   - 热传导部分工作正常
   - 结构部分待添加正确的热载荷计算
   - 暂时注释掉，等待完善

## 验证
- ✅ cantilever_beam 运行正常
- ✅ 178/178 测试通过
- ✅ 所有示例编译成功

## 待办
- ⬜ thermal_stress_2d 热载荷计算实现

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -22,14 +22,14 @@ add_fem_example(heat_2d)
 # 线弹性
 add_fem_example(elasticity_2d)
 
-# 悬臂梁（Neumann BC 演示）- 待更新到新 API
-# add_fem_example(cantilever_beam)
+# 悬臂梁（Neumann BC 演示）
+add_fem_example(cantilever_beam)
 
 # ══════════════════════════════════════════════════════════════════
 # 多物理场耦合
 # ══════════════════════════════════════════════════════════════════
 
-# 热-结构耦合 - 待更新到新 API
+# 热-结构耦合 - 待完善热载荷计算
 # add_fem_example(thermal_stress_2d)
 
 # ══════════════════════════════════════════════════════════════════
