Phase 2 完成: Material 系统重构 - MaterialFactory
✅ 新增功能：
- MaterialFactory 工厂类（支持字符串名称创建材料）
- 参数化材料创建（initializer_list）
- 内置材料注册（IsotropicElastic, OrthotropicElastic, J2Plasticity, J2PlasticityKinematic）
- 自定义材料注册接口
- 参数验证和错误处理

✅ 测试：
- 新增 12 个 MaterialFactory 单元测试
- 所有 190 个测试通过

📈 改进：
- 统一材料创建接口
- 更灵活的扩展性（registerCreator）
- 更好的错误处理和日志

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(fem STATIC
     # Material (本构模型)
     material/state_variables.cpp
     material/material.cpp
+    material/material_factory.cpp
     material/isotropic_elastic.cpp
     material/orthotropic_elastic.cpp
     material/j2_plasticity.cpp
