Phase 3 完成: Solver 系统重构 - SolverFactory
✅ 新增功能：
- SolverFactory 工厂类（支持字符串名称创建求解器）
- 参数化求解器创建（数值参数 + 字符串参数）
- 内置求解器注册（CG, PCG, BiCGSTAB）
- 支持预条件器选择（jacobi, ssor, ilu, amg）
- 自定义求解器注册接口

✅ 测试：
- 新增 11 个 SolverFactory 单元测试
- 所有 201 个测试通过

📈 改进：
- 统一求解器创建接口
- 更灵活的参数配置
- 更好的扩展性（registerCreator）

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -44,6 +44,7 @@ add_library(fem STATIC
     io/vtk_writer.cpp
     # Math - Linear Solvers
     math/solver.cpp
+    math/solver_factory.cpp
     math/cg.cpp
     math/pcg.cpp
     math/bicgstab.cpp
