Phase 4 完成: Physics 系统重构 - PhysicsFactory
✅ 新增功能：
- PhysicsFactory 工厂类（统一物理模块创建接口）
- 支持通过字符串名称创建物理模块
- 内置物理模块注册（Elasticity, Heat）
- 便捷创建方法（createElasticity, createHeat）
- 自定义物理模块注册接口

✅ 测试：
- 新增 11 个 PhysicsFactory 单元测试
- 所有 212 个测试通过

📈 改进：
- 统一物理模块创建接口
- 更好的参数管理（数值参数 + 指针参数）
- 更强的扩展性（registerCreator）

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,7 @@ add_library(fem STATIC
     assembly/assembler.cpp
     # Physics
     physics/physics_base.cpp
+    physics/physics_factory.cpp
     physics/heat_unified.cpp
     physics/elasticity_unified.cpp
     # Data (场数据管理)
