Phase 0 完成: 增量求解框架
✅ 新增核心功能：
- LoadStep: 载荷步管理（载荷递增/阶跃）
- ConvergenceHistory: 收敛历史记录
- StaticSolver: 高级静态结构求解器

✅ LoadStep 功能：
- 支持载荷递增（Ramped）和阶跃（Stepped）
- 位移边界条件（Dirichlet BC）
- 力载荷（Neumann BC）
- 子步细分（Substep）
- 载荷缩放因子（Load Scale）
- 时间插值

✅ ConvergenceHistory 功能：
- 记录每个子步的收敛信息
- 迭代次数、残差范数、求解时间
- 打印摘要和导出 CSV

✅ StaticSolver 功能：
- 集成 LoadStep、Assembler、Physics
- 自动循环载荷步和子步
- 线性/非线性求解支持
- 收敛历史跟踪
- 详细日志输出

✅ 代码改进：
- PhysicsBase 添加 compute_element 纯虚函数
- Assembler 添加 apply_dirichlet_single 方法
- Assembler::rhs() 添加非 const 重载

✅ 测试：
- 新增 14 个 LoadStep 单元测试
- 所有 226 个测试通过

📊 功能验证：
- LoadStep 插值（线性/阶跃）
- 多载荷步管理
- 边界条件应用
- 收敛历史记录

🎯 Phase 0 目标达成：
- 支持增量求解（载荷步 + 子步）
- 完整的收敛历史记录
- 为后续开发打好基础

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,6 +31,9 @@ add_library(fem STATIC
     mesh/mesh_generator.cpp
     # Assembly
     assembly/assembler.cpp
+    assembly/load_step.cpp
+    assembly/convergence_history.cpp
+    assembly/static_solver.cpp
     # Physics
     physics/physics_base.cpp
     physics/physics_factory.cpp
