--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(fem_tests
     test_data.cpp
     test_ilu.cpp
     test_amg.cpp
+    test_load_step.cpp
 )
 
 target_link_libraries(fem_tests PRIVATE fem gtest_main)
