Phase 1A: Neo-Hookean 超弹性材料模型
✅ 新增功能：
- NeoHookean 超弹性材料模型
- 支持橡胶、软组织、泡沫等大变形材料

✅ 核心实现：
- 应变能密度函数: W = C₁₀(Ī₁ - 3) + (1/D₁)(J - 1)²
- 两种参数输入：C₁₀/D₁ 或 E/ν
- 2D/3D 支持
- 当前为小变形线弹性近似（待扩展大变形）

✅ 辅助函数：
- 右 Cauchy-Green 张量计算: C = F^T F
- 第一不变量: I₁ = tr(C)
- Jacobian 行列式: J = det(F)
- Voigt 记号转换

✅ MaterialFactory 集成：
- 注册 'NeoHookean' 类型
- 支持工程参数和材料参数两种输入

✅ 测试：
- 新增 17 个 Neo-Hookean 单元测试
- 小变形验证（单轴拉伸、纯剪切）
- 2D/3D 平面应变测试
- 切线刚度对称性和正定性
- 应变能测试
- Factory 集成测试
- 辅助函数测试

✅ 所有 243 个测试通过（226 + 17）

📊 功能验证：
- 小变形线弹性近似正确
- 剪切模量 G = E/(2(1+ν))
- 泊松效应正确
- 应变能随应变增加

🎯 下一步：
- Mooney-Rivlin 模型
- 大变形 Total Lagrangian 公式
- 几何非线性框架

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,7 @@ add_library(fem STATIC
     material/orthotropic_elastic.cpp
     material/j2_plasticity.cpp
     material/j2_plasticity_kinematic.cpp
+    material/neo_hookean.cpp
     # Shape (形函数)
     shape/shape_function.cpp
     shape/shape_tri3.cpp
