--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(fem_tests
     test_ilu.cpp
     test_amg.cpp
     test_load_step.cpp
+    test_neo_hookean.cpp
 )
 
 target_link_libraries(fem_tests PRIVATE fem gtest_main)
