Phase 2.1: 几何非线性运动学工具
✅ 新增功能：
- Kinematics 运动学工具类
- Total Lagrangian 公式所需的运动学量计算

✅ 核心实现：
1. **变形梯度 F**
   - F = I + ∇u
   - 支持 Voigt 向量输入（2D/3D）

2. **应变度量**
   - Right Cauchy-Green: C = F^T F
   - Green-Lagrange 应变: E = 1/2(C - I)
   - Voigt 记号转换

3. **Jacobian**
   - J = det(F)
   - 体积比计算

4. **应力转换**
   - Push-forward: S → σ = J^(-1) F S F^T
   - Pull-back: σ → S = J F^(-1) σ F^(-T)

5. **不变量**
   - I₁ = tr(C)
   - I₂ = 1/2[(tr C)² - tr(C²)]
   - I₃ = det(C)

6. **辅助函数**
   - 3x3 行列式计算
   - 3x3 矩阵求逆（伴随矩阵法）

✅ 测试：
- 新增 25 个运动学单元测试
- 变形梯度计算（单位、拉伸、剪切）
- Green-Lagrange 应变（小变形、大变形）
- Jacobian 计算（单位、均匀拉伸、不可压）
- 应力转换（Push-Pull 一致性）
- 不变量计算
- 矩阵运算验证

✅ 所有 268 个测试通过（243 + 25）

📊 功能验证：
- 小变形：E ≈ ε（线性近似）
- 大变形：E = 1.5（F_xx = 2）
- 应力转换可逆性：σ → S → σ
- 矩阵求逆：A * A^(-1) = I

🎯 下一步：
- 几何非线性单元（基于 Total Lagrangian）
- 几何刚度矩阵
- 集成到 ElasticityUnified

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(fem STATIC
     # Core
     core/logger.cpp
     core/timer.cpp
+    core/kinematics.cpp
     # Math
     math/vector.cpp
     math/dense_matrix.cpp
