Phase 2.2: 几何非线性弹性力学模块（基础框架）
✅ 新增功能：
- ElasticityNonlinear 几何非线性物理模块
- Updated Lagrangian 公式框架

✅ 核心实现：
1. **材料刚度矩阵 K_mat**
   - K_mat = ∫ B_L^T D B_L dV
   - 线性应变-位移矩阵 B_L

2. **几何刚度矩阵 K_geo**
   - K_geo = ∫ G^T σ G dV
   - 位移梯度矩阵 G
   - 简化实现（对角项）

3. **切线刚度矩阵**
   - K_t = K_mat + K_geo

4. **非线性接口**
   - compute_element_nonlinear(u_current)
   - compute_internal_force(u_current)
   - extract_element_displacement()

5. **辅助函数**
   - compute_B_matrix（2D/3D）
   - compute_G_matrix（位移梯度）

✅ 设计特性：
- 可配置的几何刚度开关
- 支持多种应力更新方法
- 向后兼容线性分析
- 集成 Kinematics 工具

⚠️ 当前限制（待完善）：
- 内力向量计算未实现（返回零向量）
- 应力状态从零应变计算（需要增量更新）
- 变形梯度计算待实现
- 需要集成 Newton-Raphson 求解器

✅ 所有 268 个测试通过（无回归）

🎯 下一步：
- 实现内力向量计算
- 实现应力状态更新
- 集成到 Newton-Raphson 循环
- 创建验证案例（Cook's Membrane）

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,6 +41,7 @@ add_library(fem STATIC
     physics/physics_factory.cpp
     physics/heat_unified.cpp
     physics/elasticity_unified.cpp
+    physics/elasticity_nonlinear.cpp
     # Data (场数据管理)
     data/base_data.cpp
     # PostProcess (后处理)
