Phase 2.3: 完善几何非线性单元实现
✅ 核心功能完善：

1. **内力向量计算（F_int）**
   # 0 "<stdin>"
# 0 "<built-in>"
# 0 "<command-line>"
# 1 "/usr/include/stdc-predef.h" 1 3 4
# 0 "<command-line>" 2
# 1 "<stdin>"
   - 从单元位移计算应变
   - 通过材料本构计算应力
   - 高斯积分求内力向量

2. **应力状态更新**
   - 材料刚度矩阵：基于当前应变状态计算 D 矩阵
   - 几何刚度矩阵：基于当前应力状态计算 K_geo
   - 不再使用零应变/零应力简化

3. **变形梯度计算**
   # 0 "<stdin>"
# 0 "<built-in>"
# 0 "<command-line>"
# 1 "/usr/include/stdc-predef.h" 1 3 4
# 0 "<command-line>" 2
# 1 "<stdin>"
   - 从单元位移和形函数导数计算位移梯度
   - 通过 Kinematics 工具计算变形梯度

✅ 实现细节：

**内力向量**:
# 0 "<stdin>"
# 0 "<built-in>"
# 0 "<command-line>"
# 1 "/usr/include/stdc-predef.h" 1 3 4
# 0 "<command-line>" 2
# 1 "<stdin>"

**材料刚度**:
# 0 "<stdin>"
# 0 "<built-in>"
# 0 "<command-line>"
# 1 "/usr/include/stdc-predef.h" 1 3 4
# 0 "<command-line>" 2
# 1 "<stdin>"

**几何刚度**:
# 0 "<stdin>"
# 0 "<built-in>"
# 0 "<command-line>"
# 1 "/usr/include/stdc-predef.h" 1 3 4
# 0 "<command-line>" 2
# 1 "<stdin>"

✅ 新增测试（8 个）:
- 构造函数测试（2D/3D）
- 几何刚度开关测试
- 应力更新方法设置
- 维度验证（边界测试）
- 空指针验证
- Neo-Hookean 材料兼容性
- 材料指针验证

✅ 所有 276 个测试通过（268 + 8）

📊 代码改进：
- 完善 compute_internal_force（55 行 → 60 行实现）
- 完善 compute_material_stiffness（应变状态更新）
- 完善 compute_geometric_stiffness（应力状态更新）
- 实现 compute_element_deformation_gradient（26 行实现）

🎯 当前功能状态：
- ✅ 材料刚度矩阵（基于当前应变）
- ✅ 几何刚度矩阵（基于当前应力）
- ✅ 内力向量计算
- ✅ 变形梯度计算
- ✅ 应力/应变状态更新
- ⏳ Newton-Raphson 集成（待实现）
- ⏳ 验证案例（待实现）

🔬 下一步：
- Phase 2.4: Newton-Raphson 集成
- Phase 2.5: Cook's Membrane 验证
- Phase 2.6: ANSYS 对标

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(fem_tests
     test_load_step.cpp
     test_neo_hookean.cpp
     test_kinematics.cpp
+    test_elasticity_nonlinear.cpp
 )
 
 target_link_libraries(fem_tests PRIVATE fem gtest_main)
